--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>Hello Git!</h1>
+    <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui nam ducimus, aliquid debitis reiciendis minus. Facere, cum libero. Reiciendis, dolorum. Quis illum veniam quia nulla nemo! Quibusdam magnam dolore autem.
+    </p>
 </body>
 </html>
